adding node v6 support via babel-register

--- a/package.json
+++ b/package.json
@@ -27,6 +27,12 @@
     "cli.js",
     "index.js"
   ],
+  "optionalDependencies": {
+    "@babel/core": "^7.0.0-beta.39",
+    "@babel/polyfill": "^7.0.0-beta.39",
+    "@babel/preset-env": "^7.0.0-beta.39",
+    "@babel/register": "^7.0.0-beta.39"
+  },
   "peerDependencies": {
     "webpack": "^2.2.0 || ^3.0.0 || ^4.0.0-alpha.2"
   },
@@ -52,6 +58,10 @@
     "webpack-log": "^1.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0-beta.39",
+    "@babel/polyfill": "^7.0.0-beta.39",
+    "@babel/preset-env": "^7.0.0-beta.39",
+    "@babel/register": "^7.0.0-beta.39",
     "codecov": "^3.0.0",
     "eslint": "^4.5.0",
     "eslint-config-webpack": "^1.2.5",
