--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "execa": "^0.10.0",
     "intelli-espower-loader": "^1.0.1",
     "istanbul": "^0.4.5",
+    "jest": "^22.4.3",
     "mocha": "^5.0.0",
     "mocha-chrome": "^1.0.3",
     "mock-require": "^3.0.1",
