--- a/package.json
+++ b/package.json
@@ -6,24 +6,24 @@
   "repository": "webpack-contrib/webpack-serve",
   "author": "Andrew Powell <andrew@shellscape.org>",
   "homepage": "https://github.com/webpack-contrib/webpack-serve",
-  "main": "index.js",
-  "bin": "cli.js",
+  "main": "lib/index.js",
+  "bin": "lib/cli.js",
   "engines": {
     "node": ">=6"
   },
   "scripts": {
     "beautify": "npm run lint -- --fix",
     "ci": "npm run lint && npm run test",
-    "cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov --token=$WS_CODECOV_TOKEN",
-    "cover:report": "nyc report --reporter=html",
+    "ci:coverage": "npm run test:coverage -- --runInBand",
     "lint": "eslint index.js cli.js bin lib test examples",
-    "mocha": "mocha --require intelli-espower-loader test/test.js --full-trace --check-leaks --exit",
-    "test": "nyc npm run mocha"
+    "test": "jest --env=node",
+    "test:watch": "jest --watch",
+    "test:coverage": "npm run test:coverage:jest && npm run test:coverage:report",
+    "test:coverage:jest": "nyc jest --env=node --collectCoverageFrom='lib/**/*.js' --collectCoverage=true --coverageReporters=none",
+    "test:coverage:report": "nyc report --reporter=text-lcov > coverage.lcov"
   },
   "files": [
-    "lib/",
-    "cli.js",
-    "index.js"
+    "lib/"
   ],
   "peerDependencies": {
     "webpack": "^4.0.0"
@@ -56,20 +56,16 @@
   },
   "devDependencies": {
     "@webpack-contrib/eslint-config-webpack": "^2.0.4",
-    "codecov": "^3.0.0",
     "eslint": "^4.5.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-prettier": "^2.6.0",
     "execa": "^0.10.0",
-    "intelli-espower-loader": "^1.0.1",
     "istanbul": "^0.4.5",
     "jest": "^22.4.3",
-    "mocha": "^5.0.0",
     "mocha-chrome": "^1.0.3",
     "mock-require": "^3.0.1",
     "node-fetch": "^2.0.0",
     "nyc": "^11.4.1",
-    "power-assert": "^1.4.4",
     "prettier": "^1.12.1",
     "sinon": "^4.2.2",
     "strip-ansi": "^4.0.0",
