--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "cover": "nyc report --reporter=text-lcov > coverage.lcov && codecov --token=$WS_CODECOV_TOKEN",
     "cover:report": "nyc report --reporter=html",
     "lint": "eslint index.js cli.js bin lib test examples",
-    "mocha": "mocha --require intelli-espower-loader test/test.js --full-trace --check-leaks --exit",
-    "test": "nyc npm run mocha"
+    "ava": "ava test/*.test.js",
+    "test": "nyc npm run ava"
   },
   "files": [
     "lib/",
@@ -56,6 +56,7 @@
   },
   "devDependencies": {
     "@webpack-contrib/eslint-config-webpack": "^2.0.4",
+    "ava": "^1.0.0-beta.4",
     "codecov": "^3.0.0",
     "eslint": "^4.5.0",
     "eslint-plugin-import": "^2.8.0",
@@ -68,10 +69,13 @@
     "mock-require": "^3.0.1",
     "node-fetch": "^2.0.0",
     "nyc": "^11.4.1",
+    "p-defer": "^1.0.0",
     "power-assert": "^1.4.4",
     "prettier": "^1.12.1",
     "sinon": "^4.2.2",
     "strip-ansi": "^4.0.0",
+    "tcp-port-used": "^0.1.2",
+    "wait-port": "^0.2.2",
     "webpack": "^4.0.0",
     "webpack-cli": "^2.0.9",
     "ws": "^5.0.0"
